<resources>
    <string name="app_name">Riokha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">User</string>
    <string name="submit">Submit</string>
    <string name="ad_text">Tittle of your Ad</string>
    <string name="add_desc">Discription of Advertisement</string>
    <string name="ad_details">Advertisement Details</string>
    <string name="technical">technical \n
    detail \n gose here  </string>
    <string name="properties">property 1 \n
    property 2 \n property 3 \n property 4</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fist_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email ID</string>


</resources>
