<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/ad_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/ad_text"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:gravity="left|top|start"
                android:hint="@string/add_desc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_desc" />

            <TextView
                android:textColor="@android:color/white"
                android:background="@android:color/darker_gray"
                android:text="@string/ad_details"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:hint="Property-2"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="Property-2"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                app:cardBackgroundColor="#e78413"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="left"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center_vertical"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">
                <TextView
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:text="Add Photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"

        android:layout_width="match_parent"
        app:cardBackgroundColor="#e78413"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="@dimen/textSize1"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>